[project]
name = "app-webs-check"
version = "0.1.0"
description = "Auditable Streamlit app for bulk company verification with OpenRouter"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "langchain>=1.0.6",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydantic>=2.11.4",
    "requests>=2.32.3",
    "streamlit>=1.53.0",
    "xlrd>=2.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]

[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
